[gd_scene load_steps=5 format=3 uid="uid://cjqebfhl081r7"]

[ext_resource type="Script" path="res://hud.gd" id="1_vvfc8"]

[sub_resource type="LabelSettings" id="LabelSettings_0kf3f"]
font_size = 60
outline_size = 2

[sub_resource type="LabelSettings" id="LabelSettings_vbas2"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_hxiui"]
font_size = 24

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_vvfc8")

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.0
offset_right = 500.0
offset_bottom = 100.0
grow_horizontal = 2
text = "Reaction Time Test
"
label_settings = SubResource("LabelSettings_0kf3f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextBox" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -50.0
offset_right = 500.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
text = "Click as quickly as possible when it turns green"
label_settings = SubResource("LabelSettings_vbas2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Annotation" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -496.0
offset_top = 30.0
offset_right = 504.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
text = "(click to continue)"
label_settings = SubResource("LabelSettings_hxiui")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = 140.0
offset_right = 22.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
text = "Start"

[connection signal="button_down" from="StartButton" to="." method="_on_start_button_button_down"]
